refactor: 채점 시 메모리 최솟값 제한 수정
